resources.tf
resource "google_compute_network" "development"{
  name="gcp_dev"
  auto_create_subnetworks=true
}

resource "aws_vpc" "newvpc_eks" {
  cidr_block = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support = true
  tags  = {
     Name = "terraform_newvpc_eks"
  }
}

resource "aws_subnet" "subnet1"{
  cidr_block = "Cidrsubnet(aws_vpc.newvpc_eks.cidr_block, 3, 1)"
  vpc_id = "aws_vpc.newvpc_eks.id"
  availability_zone = "us-east-1a"
}

resource "aws_subnet" "subnet2" {
  cidr_block = "Cidrsubnet(aws_vpc.newvpc_eks.cidr_block, 2, 2)"
  vpc_id = "aws_vpc.newvpc_eks.id"
  availability_zone = "us-east-1b"
}

resource "aws_security_group" "subnetsecurity" {
vpc_id = "aws_vpc.newvpc_eks.id"
 ingress{
   cidr_blocks = [aws_vpc.newvpc_eks.cidr_block]
   from_port = 80
   to_port = 80
   protocol = "tcp"
 }
}
